# Otus-python-basic

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml  view.py
homework_03/items/: items_views.py
homework_03/users/: crud.py  schemas.py  views.py
homework_04/: config.py  jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  index.html
homework_06_test/: app.py
homework_06_test/templates/: base.html
homework_06_test/views/: review.py
