[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = "Homework 03. Mogutov Timofey"
authors = ["TimofeyHub <timatofey@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "homework_03"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "0.100.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
